--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "SpringgreenSentimentalAddin",
+  "name": "AOC2021",
   "version": "1.0.0",
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": ["advent of code", "puzzle"],
+  "author": "Joseph Adams",
+  "license": "MIT",
   "dependencies": {
     "logic_js": "0.0.3",
     "ramda": "^0.27.1"
