Add solution of day 10. I'm not happy with all the names I've given.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["advent of code", "puzzle"],
+  "keywords": [
+    "advent of code",
+    "puzzle"
+  ],
   "author": "Joseph Adams",
   "license": "MIT",
   "dependencies": {
