--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
   "dependencies": {
     "logic_js": "0.0.3",
     "ramda": "^0.27.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.4.1",
+    "eslint-config-google": "^0.14.0"
   }
 }
