--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
   "license": "MIT",
   "dependencies": {
     "ramda": "^0.27.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.4.1",
+    "eslint-config-google": "^0.14.0"
   }
 }
