Solve day 11 and 12 of AOC 2025. Clean up repo.

--- a/AOC2025/package.json
+++ b/AOC2025/package.json
@@ -12,9 +12,10 @@
   "author": "Joseph Adams",
   "license": "MIT",
   "dependencies": {
+    "@easy-data-structure-js/union-find": "^1.0.0",
     "heap-js": "^2.2.0",
-    "ramda": "^0.32.0",
-    "@easy-data-structure-js/union-find": "^1.0.0"
+    "mathjs": "^15.1.0",
+    "ramda": "^0.32.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
