Solve part 2 of day 10 in AOC 2025.

--- a/AOC2025/package.json
+++ b/AOC2025/package.json
@@ -12,6 +12,7 @@
   "author": "Joseph Adams",
   "license": "MIT",
   "dependencies": {
+    "z3-solver": "^4.15.4",
     "@easy-data-structure-js/union-find": "^1.0.0",
     "heap-js": "^2.2.0",
     "mathjs": "^15.1.0",
